--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h3>This is my attempt at making the brownies, not the pretties but taste pretty good ngl. </h3>
         <img src="brownies.jpg" alt="Brownies" style="width: 500px;height: 500px;">
     <h3>This is a little website that I made myself to test my coding skill, what do you think?</h3>
-    <h6>6/26/2023</h6>
+    <b><a href=""><h6>6/26/2023</h6></a></b>
 
 </body>
 
