--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Congrat tu the motherfucking lation</title>
+    <title>Lê thành nguyên is a bitch</title>
 </head>
 
 <body>
