--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html>
 
 <head>
-    <title>Lê thành nguyên is a bitch</title>
+    <title>congrats tu the motherfucking lation </title>
 </head>
 
 <body>
     <h1>Welcome</h1>
+        <h1>Welcome</h1>
+<h2>Long ass story ahead, skip if you want to</h2>
+    <div style="width: 700px;">Wow, I can't believe that you actually got here. First thing first I gotta thank you, thank you for giving me an opportunity to do what I love and let me help you and also for actually reading this thing that I spent a lot of time writing and researching because I want to give you the best product that I can. Funny story, this is not my first time making a plan for someone like this. A few years back I had a crush on this one girl in my class, she's nothing too special, not the prettiest and not the smartest among the girls in my class but I just like the way she talks and the way she carries some of our conversation. One time when we were chatting she complained that she started gaining weight again and I decided to make a plan like this to surprise her and tell her that I've been liking her for a while. I dedicated so much time researching what she likes and what she doesn't only to later discovered that she was using me for
+        a lot of things actually, from all the gifts that I give her on all sorts of different occasions like birthdays, national woman day, Vietnam woman day, etc to asking me to do all sort of thing like cleaning the class for her and doing homework for her. Looking back I think I had a mental breakdown the following week which now I think I totally deserve that for being so incredibly stupid simp. I've been wanting to get this off my chest for a while now but I'd never expected it to be in the text form for a friend of mine that I'm trying to help to read it, kinda weird tbh. Even though i know that there's only 20% you're gonna get here and less than 5% that you're gonna read all of this boring ass text but I feel like I should still write it down, something tells me that you are gonna understand my situation. Welp that's just a few things that I've been wanting to get off my chest for a while now but can't find the right person to talk to. Once again, thank you for actually giving a fuck about my work, I appreciate it, I really do. 
+    </div>
     <h2>Here's the recipe</h2>
 
     <ul>
